--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
+
+
 body{
     margin: 0;
     padding: 5px;
@@ -90,7 +96,7 @@ header {
 .heading {
     font-size: 120px;
     font-family: 'BIZ UDPMincho';
-    font-weight: 400;
+    font-weight: 100;
     margin-bottom: 20px;
 }
 
@@ -160,5 +166,4 @@ header {
     font-size: 16px;
     font-weight: regular;
     color: rgba(0, 0, 0, 0.8);
-    /* padding-left: 16px; */
 }
