--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ margin-top: 10px;
       font-size: 16px;
     }
   
-    .nav-content .page-links,.conctact-nav{
+    .nav-content .page-links,.contact-nav{
       display: none;
     }
     .nav-content::after {
@@ -386,10 +386,13 @@ margin-top: 10px;
         text-align: center;
         height: 50px;
     }
+    .our {
+        width: 100%;
+    }
 
     .data {
         height: 150px;
-        width: 110px;
+        width: 150px;
         /* background-color: aquamarine; */
         /* margin: 10px; */
         border-top: 1px solid black; 
