--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ body {
         line-height: 24px;
         color: rgba(0, 0, 0, 1);
     }
+
+    .navbar a h1:hover {
+        color: rgba(83, 4, 83, 0.862);
+    }
     
     .navbar .logo h1 {
       font-weight: regular;
@@ -118,7 +122,16 @@ body {
     width: 90%;
     height: 70%;
     border-radius: 8px;
+
+    transition: 0.2s linear;
   }
+
+  .landing-page img:hover {
+    transform: scale(1);
+    box-shadow: 0.1px 0.1px 10px rgb(204, 202, 202);
+  }
+
+
   
   /* for making of the collage */
   .collage {
@@ -249,7 +262,24 @@ margin-top: 10px;
     font-family: BIZ UDPMincho;
     line-height: 52px;
     letter-spacing: -1%;
+
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadein 1.5s ease-out forwards;
+    z-index: -20;
   
+  }
+
+  @keyframes fadein {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
   }
   
   
@@ -299,7 +329,11 @@ margin-top: 10px;
   
   /* media queries for responsive page */
   
-  @media only screen and (max-width: 1024px) {
+  @media only screen and (max-width: 1060px) {
+    .landing-page img {
+        margin-top: 80px;
+    }
+
     .collage-img {
       width: 300px;
       height: auto;
@@ -318,7 +352,11 @@ margin-top: 10px;
     }
   }
   
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 780px) {
+    .heading {
+        font-size: 100px;
+        padding: 50px;
+    }
     .collage {
       justify-content: center;
     }
@@ -342,7 +380,12 @@ margin-top: 10px;
   }
   
   @media only screen and (max-width: 550px) {
+    .heading {
+        margin-top: 15px;
+    }
     .landing-page img {
+        margin-top: 15px;
+        margin-bottom: 5px;
         margin-left: 20px;
     }
     .navbar{
